--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v2    - name: Set up JDK 1.8
+    - uses: actions/checkout@v2    
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: '1.8'
