--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,9 @@ jobs:
     # - name: Build with Gradle 8.9
     #   run: gradle build
 
-  publish: 
-    needs: build
-    runs-on: ubuntu-latest
+  # publish: 
+  #   needs: build
+  #   runs-on: ubuntu-latest
 
   # dependency-submission:
 
