--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,83 +5,83 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-jobs:
-  build-java:
-
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Build with Gradle
-      run: ./gradlew build
-
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: koshila/myrepo
-        registry: docker.io
-        username: ${{ vars.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
 # name: Java CI with Gradle
 
 # on:
 #   push:
-#     branches: [ "master" ]
+#     branches: [ master ]
 #   pull_request:
-#     branches: [ "master" ]
+#     branches: [ master ]
 
 # jobs:
-#   build:
+#   build-java:
 
 #     runs-on: ubuntu-latest
-#     permissions:
-#       contents: read
-
+    
 #     steps:
-#     - uses: actions/checkout@v2    
+#     - uses: actions/checkout@v2
+
 #     - name: Set up JDK 1.8
 #       uses: actions/setup-java@v1
 #       with:
-#         java-version: '1.8'
-#         distribution: 'temurin'
+#         java-version: 1.8
 
-#     - name: Grant execute permissions to gradlenew
-#       run : chmod +x gradlew
+#     - name: Grant execute permission for gradlew
+#       run: chmod +x gradlew
 
-#     - name: Build with Gradle Wrapper
+#     - name: Build with Gradle
 #       run: ./gradlew build
 
-#     -
-#       name: Login to Docker Hub
-#       uses: docker/login-action@v3
+#     - name: Build and Push Docker Image
+#       uses: mr-smithers-excellent/docker-build-push@v4
 #       with:
+#         image: koshila/myrepo
+#         registry: docker.io
 #         username: ${{ vars.DOCKERHUB_USERNAME }}
 #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#     -
-#       name: Build and push
-#       uses: docker/build-push-action@v6
-#       with:
-#         image: koshila/myrepo
-#         push: true
-#         tags: user/app:latest
+name: Java CI with Gradle
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+    - uses: actions/checkout@v2    
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: '1.8'
+        distribution: 'temurin'
+
+    - name: Grant execute permissions to gradlenew
+      run : chmod +x gradlew
+
+    - name: Build with Gradle Wrapper
+      run: ./gradlew build
+
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ vars.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    -
+      name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        image: koshila/myrepo
+        push: true
+        tags: user/app:latest
 
   
